# soomfon

./: LICENSE  README.md  main.py  pyproject.toml
examples/: demo.py
src/soomfon/: __init__.py  _cli.py  _device.py
udev/: 99-soomfon.rules
